--- a/style.css
+++ b/style.css
@@ -9,19 +9,57 @@
 #section2 {
   display:none;
 }
+
 body {
-    background-image: url("images/background1.jpg")
+    background-image: url("images/background.jpg")
 }
+
+h3 {
+  color : #0080FF;
+}
+
+h4{
+  color:#696969;
+  font-family: cursive;
+  font-size: large;
+  font-weight: bolder;
+  text-align: left;
+}
+
+p{
+  color:#696969;
+  font-family: cursive;
+  font-size: large;
+  font-weight: bolder;
+  text-align: center;
+}
+
+button{
+  background-color: #F5A9BC;
+  border-radius: 10px;
+  width: 100px;
+  height: 30px;
+}
+
+form {
+  color:#696969;
+  font-family: cursive;
+  font-size: large;
+  font-weight: bolder;
+  text-align: center;
+}
+
 div {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 300px;
+  width: 400px;
   height: 200px;
-  margin-left: -150px;
+  margin-left: -200px;
   margin-top: -100px;
-  border: 5px solid #000000;
-  background-color: #857;
+  border: 5px solid #EB984E;
+  background-color: #76D7C4;
   padding:35px;
   border-radius: 20%;
+  opacity: 0.85;
 }
