--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#welcome, #trivia, #section3, #section4, #section5, #section6 {
+#welcome, #trivia, #section3, #section4, #section5, #section6, #section7 {
   display:none;
 }
 
@@ -11,11 +11,11 @@
 }
 
 body {
-    background-image: url("images/background.jpg")
+    background-image: url("images/background.jpg");
 }
 
-h3 {
-  color : #0080FF;
+h2 {
+  color : #66CCCC;
 }
 
 h4{
@@ -29,7 +29,7 @@ h4{
 p{
   color:#696969;
   font-family: cursive;
-  font-size: large;
+  font-size: 15pt;
   font-weight: bolder;
   text-align: center;
 }
@@ -41,12 +41,26 @@ button{
   height: 30px;
 }
 
+button:hover {
+  background-color: #EC7063 ;
+  color: white;
+}
+
 form {
   color:#696969;
   font-family: cursive;
   font-size: large;
-  font-weight: bolder;
+  font-weight: bold;
   text-align: center;
+}
+
+#firstname {
+  font-size: 25pt;
+  color:#66CC99;
+  font-weight: bold;
+  height: 40px;
+  width: 300px;
+
 }
 
 div {
@@ -58,8 +72,9 @@ div {
   margin-left: -200px;
   margin-top: -100px;
   border: 5px solid #EB984E;
-  background-color: #76D7C4;
+  background-color: yellow;
   padding:35px;
   border-radius: 20%;
-  opacity: 0.85;
+  opacity: 0.88;
+  padding-bottom: 50px;
 }
